housekeeping: isolated roll fixes. @spinosa, group and nest multiple overrides, a la 'frame-collapsed' on line #303

--- a/app/assets/stylesheets/partials/_guide-overlay-view.scss
+++ b/app/assets/stylesheets/partials/_guide-overlay-view.scss
@@ -73,8 +73,8 @@
   .guide-header-title {
     @include ellipsis;
 
-    font-size: 1.4em;
-    line-height: 2.1;
+    font-size: 1.3em;
+    line-height: 2.3;
   }
 }
 
